eks-with-ingress-ALB-External-dns/02-UserManagementMicroService-nodeportService.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-restapp-nodeport-service
  labels:
    app: usermgmt-restapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
spec:
  type: NodePort
  selector:
    app: usermgmt-restapp
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 31231
